--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: recozzi <marvin@42.fr>                     +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2023/11/18 21:37:24 by recozzi           #+#    #+#              #
+#    Updated: 2023/11/18 21:37:25 by recozzi          ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME		:=	libftprintf.a
 
 CC			:=	gcc -c
