--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -1,20 +1,8 @@
-# **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: recozzi <marvin@42.fr>                     +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/11/18 21:37:24 by recozzi           #+#    #+#              #
-#    Updated: 2023/11/18 21:37:25 by recozzi          ###   ########.fr        #
-#                                                                              #
-# **************************************************************************** #
-
 NAME		:=	libftprintf.a
 
-CC			:=	gcc -c
+CC			:=	gcc
 
-CFLAGS		:=	-Wall -Wextra -Werror
+CFLAGS		:=	-g -Wall -Wextra -Werror
 
 AR			:=	ar -crs
 
@@ -39,7 +27,6 @@ OBJS 		:=	$(addprefix $(OBJS_DIR), $(SRCS:.c=.o))
 RED = \033[0;91m
 GREEN = \033[0;92m
 YELLOW = \033[0;93m
-CYAN = \033[0;96m
 WHITE = \033[0;97m
 
 # ======================================================================== #
@@ -59,11 +46,10 @@ $(NAME): $(OBJS)
 
 clean:
 	$(RM) $(OBJS)
-	@echo "$(RED)All $(CYAN)$(NAME)$(RED)'s objects removed with $(WHITE)${RM} $(YELLOW)"
+	@echo "$(RED)All object files removed.$(WHITE)"
 
 fclean: clean
 	$(RM) $(NAME) $(OBJS_DIR)
-	@echo "$(RED)..and $(CYAN)${NAME} $(RED)as been removed"
 
 re: fclean all
 
